apps/staging/openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
  namespace: open-webui
spec:
  rules:
  - host: chat.natetech.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui-service
            port:
              number: 8080
  tls:
  - hosts:
    - chat.natetech.org
    secretName: openwebui-certificate-secret
